src/test/deca/context/valid/sans_objet/minmin_cont_01.deca
// Description:
//    Programme minimaliste testant un nombre avec plusieurs opérateurs unaires imbriqués.
//
// Resultats:
//
//
//
// Historique:
//    cree le 04/01/2023

{
    int x = -(-(-3));
}