src/test/deca/context/invalid/objet/print_undeclared.deca
// Description:
//    Print d'un identifier non initialisé.
//
// Resultats:
//      Error
//
// Historique:
//    cree le 04/01/2023

{
    print(x);
}